Updated styling and added strings file
Updated styling for the components and specifically for buddies component and utilized strings file to store all the strings.

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <meta property="og:title" content="Hari Aditya | Frontend Developer Portfolio">
     <meta property="og:description" content="Portfolio of Hari Aditya, a passionate React Frontend Developer.">
     <meta property="og:image" content="%PUBLIC_URL%/images/preview.jpg">
-    <meta property="og:url" content="https://your-domain.com">
+    <meta property="og:url" content="https://hariadityaportfolio.vercel.app/">
     <meta property="og:type" content="website">
 
     <!-- Twitter -->
